# FinalProject_PromptAI_Tanya002020208

./: README.md  Requirements.txt  TanyaBansal_ProjectProposal_PromptAI.html  Webpage.html
learnforge/: .env.example  .gitignore  LICENSE  Makefile  README.md  SETUP_GUIDE.md  pyproject.toml
learnforge/.streamlit/: config.toml
learnforge/app/: streamlit_app.py
learnforge/app/pages/: 1_Curriculum.py  2_Lesson.py  3_Quiz_Arena.py  4_Flashcards.py  5_Dashboard.py  6_Data_Manager.py
learnforge/data/corpus/blooms/: analyze_level.md  apply_level.md  create_level.md  evaluate_level.md  remember_level.md  understand_level.md
learnforge/data/processed/: test.jsonl  train.jsonl  val.jsonl
learnforge/demo_data/: curriculum_demo.json  flashcards.json  lessons.json  quizzes.json
learnforge/demo_data/upload_samples/: deep_learning_cheatsheet.txt  kubernetes_notes.md  python_study_notes.md  statistics_formulas.csv
learnforge/docs/: architecture.md  ethics.md  finetuning_report.md  prompt_engineering.md  rag_design.md
learnforge/evaluation/: eval_content.py  eval_e2e.py  eval_rag.py
learnforge/scripts/: build_index.py  run_evals.py
learnforge/src/: config.py
learnforge/src/agents/: adaptive_assessor.py  base.py  content_generator.py  curriculum_architect.py
learnforge/src/content/: manager.py  multimodal.py
learnforge/src/finetuning/: inference.py  train_lora.py
learnforge/src/orchestrator/: graph.py
learnforge/src/profile/: storage.py
learnforge/src/rag/: ingest.py  retrieve.py
learnforge/tests/: test_agents.py  test_orchestrator.py  test_storage_rag.py
(+30 files in other folders)
