[project]
name = "learnforge"
version = "0.1.0"
description = "Personalized AI Learning Content Creator with multi-agent orchestration, RAG, and fine-tuned content generation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tanya Bansal"}]
dependencies = [
    "openai>=1.50.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.5.0",
    "langchain-text-splitters>=0.3.0",
    "requests>=2.31.0",
    "PyMuPDF>=1.24.0",
]
[project.optional-dependencies]
finetune = [
    "transformers>=4.45.0", "peft>=0.13.0", "trl>=0.11.0",
    "bitsandbytes>=0.44.0", "accelerate>=1.0.0", "datasets>=3.0.0",
]
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
